--- a/Views/Enrollments/Create.cshtml
+++ b/Views/Enrollments/Create.cshtml
@@ -19,7 +19,7 @@
                     success: function (data) {
                         response(data);
                         response($.map(data, function (item) {
-                            return {label: item.Name, value: item.Name, id: item.Id }
+                            return { label: item.Name, value: item.Name, id: item.Id }
                         }))
                     }
                 });
@@ -27,53 +27,90 @@
             minLength: 2,
             select: function (event, query) {
                 console.log(query)
+                $("#StudentID").val(query.item.id)
             }
         });
-    })
+    });
+
+    function Added(res) {
+        if (res.IsSuccess) {
+            $(function () {
+                $("#success").fadeIn('fast')
+                // $("#success").append(res.Message)
+            })
+        } else {
+            Failed(res)
+        }
+    }
+
+
+    function Failed(res) {
+        if (!res.IsSuccess) {
+            $(function () {
+                $("#failed").fadeIn('fast')
+                // $("#failed").append(res.Message)
+            })
+        }
+    }
 </script>
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Ajax.BeginForm("AddStudent", "Enrollments", new AjaxOptions { 
+    HttpMethod = "POST",
+    OnSuccess = "Added",
+    OnFailure = "Failed"
+})) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Enrollment</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Grade, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Grade, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Grade, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<div class="form-horizontal">
+    <h4>Enrollment</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CourseID, "CourseID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CourseID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<div id="failed" class="alert alert-danger alert-dismissible fade show" style="display: none" role="alert">
+    There as an error adding the Student to this course.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.StudentID, "StudentID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Student.FirstName, null, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HiddenFor(model => model.StudentID)
-                @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div id="success" class="alert alert-success alert-dismissible fade show" style="display: none" role="alert">
+        There the Student was Added Successfully to this course.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10 mt-4">
-                <input type="submit" value="Create" class="btn btn-dark" />
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Grade, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Grade, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Grade, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.CourseID, "CourseID", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("CourseID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.StudentID, "StudentID", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Student.FirstName, null, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HiddenFor(model => model.StudentID)
+            @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10 mt-4">
+            <input type="submit" value="Create" class="btn btn-dark" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
