--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-1">
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 col-form-label" })
                         <div class="col-md-10">
                             <div class="form-group">
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-1">
                         <div class="offset-md-2 col-md-10">
                             <div class="checkbox">
                                 @Html.CheckBoxFor(m => m.RememberMe)
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-1">
                         <div class="offset-md-2 col-md-10">
                             <input type="submit" value="Log in" class="btn btn-outline-dark" />
                         </div>
